fix few more bugs and deprecations. ready to merge